update notebooks - final

--- a/notebooks/Accessing-S3-via-SageMaker-notebooks.ipynb
+++ b/notebooks/Accessing-S3-via-SageMaker-notebooks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8ecc4f8b",
+   "id": "5b13e94f",
    "metadata": {},
    "source": [
     "---\n",
@@ -43,7 +43,7 @@
     "\n",
     "2. **Initialize the SageMaker Session**: Next, we'll create a `sagemaker.Session()` object, which will help manage and track the resources and operations we use in SageMaker, such as training jobs and model artifacts. The session acts as a bridge between the SageMaker SDK commands in our notebook and AWS services.\n",
     "\n",
-    "3. **Set Up an S3 Client**: Using `boto3`, we'll initialize an S3 client for accessing S3 buckets directly. This client enables us to handle data storage, retrieve datasets, and manage files in S3, which will be essential as we work through various machine learning tasks.\n",
+    "3. **Set Up an S3 Client using boto3**: Using `boto3`, we'll initialize an S3 client for accessing S3 buckets directly. Boto3 is the official AWS SDK for Python, allowing developers to interact programmatically with AWS services like S3, EC2, and Lambda.\n",
     "\n",
     "Starting with these initializations prepares our notebook environment to efficiently interact with AWS resources for model development, data management, and deployment."
    ]
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee05fd5f",
+   "id": "172204a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ce501be",
+   "id": "8bba285f",
    "metadata": {},
    "source": [
     "Preview variable details."
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38530845",
+   "id": "16911fff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2efd5d80",
+   "id": "d6607a67",
    "metadata": {},
    "source": [
     "## Reading data from S3\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "322cd1af",
+   "id": "4784ef5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "267cebca",
+   "id": "45cd9734",
    "metadata": {},
    "source": [
     "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e80ce7e",
+   "id": "ed37fcd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a61d4ca7",
+   "id": "116b3ff4",
    "metadata": {},
    "source": [
     "/home/ec2-user/SageMaker/"
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c7bab08",
+   "id": "34bde336",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9da54499",
+   "id": "f55892cd",
    "metadata": {},
    "source": [
     "**Note**: You may need to hit refresh on the file explorer panel to the left to see this file. If you get any permission issues...\n",
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b5cfd46",
+   "id": "d5a64a4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "491aff85",
+   "id": "6f67740d",
    "metadata": {},
    "source": [
     "Total size of bucket 'doejohn-titanic-s3': 0.06 MB\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "685d974e",
+   "id": "5ec0f240",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93397d33",
+   "id": "e63093f1",
    "metadata": {},
    "source": [
     "/home/ec2-user/SageMaker\n",
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7a0de27",
+   "id": "f2491b96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "469d78a5",
+   "id": "6591aae0",
    "metadata": {},
    "source": [
     "Our AWS_helpers.py file can be found in `AWS_helpers/helpers.py`. With this file downloaded, you can call this function via..."
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fca6801",
+   "id": "918daaf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68b5479f",
+   "id": "30bec506",
    "metadata": {},
    "source": [
     "{'size_mb': 0.060057640075683594, 'size_gb': 5.865003913640976e-05}\n",
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14e35d3c",
+   "id": "cfab2942",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4e1af79",
+   "id": "1aedc11b",
    "metadata": {},
    "source": [
     "Estimated monthly storage cost: $0.0000\n",
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07f2930d",
+   "id": "57783a82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37af8d09",
+   "id": "4966f369",
    "metadata": {},
    "source": [
     "**Important Considerations**:\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66781bd4",
+   "id": "74fa5aad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ad8cb14",
+   "id": "8b14c4ec",
    "metadata": {},
    "source": [
     "Files uploaded successfully.\n",
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f70abea5",
+   "id": "97681c6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3688c449",
+   "id": "d6d9c603",
    "metadata": {},
    "source": [
     "Alternatively, we can substitute this for a helper function call as well."
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b75d3a47",
+   "id": "b9106e0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c01ef6fd",
+   "id": "c5d91273",
    "metadata": {},
    "source": [
     "['results/results.txt', 'titanic_test.csv', 'titanic_train.csv']\n",
